--- a/webTechnology/cw2/CO7098_CW2_xx54/WebContent/WEB-INF/web.xml
+++ b/webTechnology/cw2/CO7098_CW2_xx54/WebContent/WEB-INF/web.xml
@@ -9,6 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+    <servlet>
+  <servlet-name>LoginServlet</servlet-name>
+  <servlet-class>uk.ac.le.cs.CO3098.LoginServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+ <servlet-name>LoginServlet</servlet-name>
+ <url-pattern>/servlets/LoginServlet</url-pattern>
+</servlet-mapping>
   <servlet>
   <servlet-name>RegisterServlet</servlet-name>
   <servlet-class>uk.ac.le.cs.CO3098.RegisterServlet</servlet-class>
