adding student class to the workflow

--- a/advancedWebTechnology/awtCw2/awtCw2Q3/awtCw2Q3/awtCw2Q3.csproj
+++ b/advancedWebTechnology/awtCw2/awtCw2Q3/awtCw2Q3/awtCw2Q3.csproj
@@ -87,6 +87,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Student.cs" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -100,7 +101,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Service1.xamlx">
+    <Content Include="specifyTimeAndPlaceService.xamlx">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Content>
