--- a/advancedWebTechnology/awtCw2/awtCw2Q3/awtCw2Q3/awtCw2Q3.csproj
+++ b/advancedWebTechnology/awtCw2/awtCw2Q3/awtCw2Q3/awtCw2Q3.csproj
@@ -117,6 +117,16 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="IdentifyTransport.xamlx">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bookingService.xamlx">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
