adding pay to booking service

--- a/advancedWebTechnology/awtCw2/awtCw2Q3/awtCw2Q3/awtCw2Q3.csproj
+++ b/advancedWebTechnology/awtCw2/awtCw2Q3/awtCw2Q3/awtCw2Q3.csproj
@@ -87,7 +87,6 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Student.cs" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -95,6 +94,7 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Compile Include="PayForBooking.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
