--- a/webTechnology/cw3/UMESpring/src/main/resources/application.properties
+++ b/webTechnology/cw3/UMESpring/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 #spring.mvc.view.suffix=.jsp
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/xx54
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=xx54
+spring.datasource.password=elereivu
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
